<resources>
    <string name="app_name">Subscriber</string>
    <string name="user_name"></string>
    <string name="e_mail"></string>
    <string name="hint_name">name</string>
    <string name="hint_e_mail">e-mail</string>
    <string name="type_button">Fill form</string>
    <string name="subscribe_button">Subscribe</string>
    <string name="vanishButton">Vanish</string>
    <string name="outputField"></string>
    <string name="welcome_message">Subscribed as %1$s%n%2$s</string>
</resources>
